sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:6: error: '=' expected but ';' found.
  while (k==true) {
^